loopfor.LoopFor.scala.error
Compilation error:
LoopFor:1: error: not found: value c
c=isOverBaggle()
^LoopFor:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var b:Int
    ^LoopFor:3: error: local variables must be initialized
var b:Int
    ^LoopFor:4: error: not found: value False
for(c<-False to True){
       ^LoopFor:4: error: not found: value True
for(c<-False to True){
                ^