loopfor.LoopFor.scala.code
c=isOverBaggle()
var a:Int=0
var b:Int
for(c<-False to True){
  forward();
  a=a+1
}
pickupBaggle()
for(b<-a to 0){
  backward();
}
dropBaggle()